Changes since CEXP-1.5
 2008/3/22:
 - Fixed compiler warnings:
   * yyerror() now takes a 'const char *' argument.
   * declare 'ioctl' in rtems_hackdefs.h
 2008/3/21:
 - Fixed potential array overflow when composing cexp_main arglist.
   Thanks to smart gcc-4.3.0 who issued a warning :-)
 2008/3/20:
 - (build system): added --disable-libelf configure option
   which allows for building a system completely w/o loader
   -- needs a built-in symbol table, however.
 2008/1/6:
 - (xsyms/libelf) when cloning sections we should not just copy
	Elf_Data objects; the BSD libelf implementation has private
	fields beyond the public ones and these private fields.
	in particular, the 'data is malloced' flag) must not be
	copied blindly. Hence, we just copy the public (and relevant)
	fields explicitly.
 2007/10/16:
 - more recent gcc/gas use ELF section 'COMDAT' groups for 'linkonce'
   (rather than 'gnu.linkonce.xxx' sections).
   We now handle these (and do not re-load such groups anymore).
   Section symbols of group members now point to the instance first
   loaded.
   Note that prior to this change, 'linkonce groups' were loaded
   multiple times (but relocs always used the first instance, i.e.,
   we wasted memory but incurred no real problem).
   The old behavior for sections named '.gnu.linkonce.xxx' is still
   supported.
 2007/10/08:
 - added --with-newlib, --disable-multilib to configure options
   (when using top-level Makefile)
 2007/10/08:
 - replaced autoconf check which defined NO_THREAD_PROTECTION by
   simple #ifdef __rtems__ test.
 2007/10/08:
 - cache some more BFD info for the disassembler to make binutils-2.18
   work.
 2007/10/08:
 - libtecla 'install' failed to create man3, man4, ... subdirs.
 - add '-static' compiler flag when building the demo with gcc
 2007/2/14:
 - ported libtecla-1.6.1
 2005/12/16:
 - Bugfix: unary '-' operator on 'double' numbers scrambled the
   number's bit pattern (reported by Peter Dufault).
 2005/12/7: