@@ -1,4 +1,8 @@
 Changes since CEXP-1.5
+ 2008/4/29:
+ - Added toplevel Makefile rules 'rtemsbsp'/'rtemsbsp-install' which
+   read Makefile.inc and configure the package using CPU flags and
+   setting prefix/exec_prefix/includedir to match std. RTEMS layout.
  2008/3/22:
  - Fixed compiler warnings:
    * yyerror() now takes a 'const char *' argument.
